// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`minchoBabelPlugin > keeps inline object class dictionary syntax in css rule mode 1`] = `
[
  "extracted_1wvwi3h.css.ts",
  "import { css as _css } from "@mincho-js/css";
const isActive = true;
export var _$mincho$$App = _css({
  active: isActive
});
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > keeps inline object class dictionary syntax in css rule mode 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_1wvwi3h.css.ts";
const isActive = true;
function App() {
  return <div className={_$mincho$$App2} />;
}"
`;

exports[`minchoBabelPlugin > lowers custom component class-value jsx css prop through cx 1`] = `
[
  "extracted_1ypr351.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > lowers custom component class-value jsx css prop through cx 2`] = `
"import { cx as _cx } from "@mincho-js/css/classname";
const styleA = "base";
function Button(props) {
  return <button {...props} />;
}
function App() {
  return <Button className={_cx(styleA)} />;
}"
`;

exports[`minchoBabelPlugin > lowers custom component inline object jsx css prop through css rule mode 1`] = `
[
  "extracted_y60r8r.css.ts",
  "import { css as _css } from "@mincho-js/css";
export var _$mincho$$App = _css({
  color: "red"
});
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > lowers custom component inline object jsx css prop through css rule mode 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_y60r8r.css.ts";
function Button(props) {
  return <button {...props} />;
}
function App() {
  return <Button className={_$mincho$$App2} />;
}"
`;

exports[`minchoBabelPlugin > lowers custom element class-value jsx css prop through className 1`] = `
[
  "extracted_k5klam.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > lowers custom element class-value jsx css prop through className 2`] = `
"import { cx as _cx } from "@mincho-js/css/classname";
const styleA = "base";
function App() {
  return <my-element className={_cx(styleA)} />;
}"
`;

exports[`minchoBabelPlugin > lowers identifier css result through cx without double wrapping 1`] = `
[
  "extracted_mcgo2u.css.ts",
  "import { css } from "@mincho-js/css";
export var _$mincho$$styleA = css({
  color: "red"
});
var _$mincho$$styleA2 = _$mincho$$styleA;",
]
`;

exports[`minchoBabelPlugin > lowers identifier css result through cx without double wrapping 2`] = `
"import { _$mincho$$styleA as _$mincho$$styleA2 } from "extracted_mcgo2u.css.ts";
import { cx as _cx } from "@mincho-js/css/classname";
import { css } from "@mincho-js/css";
const styleA = _$mincho$$styleA2;
function App() {
  return <div className={_cx(styleA)} />;
}"
`;

exports[`minchoBabelPlugin > lowers member-expression class-value jsx css prop through cx 1`] = `
[
  "extracted_2bu5eg.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > lowers member-expression class-value jsx css prop through cx 2`] = `
"import { cx as _cx } from "@mincho-js/css/classname";
const motion = {
  div: "div"
};
const styleA = "base";
function App() {
  return <motion.div className={_cx(styleA)} />;
}"
`;
